<resources>
    <string name="app_name">AmiPool</string>
    <string name="app_logo">AmiPool Logo</string>
    <string name="app_tagLine">It\'s cool to Pool</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="login_hint_username">Student Email or Phone No.</string>
    <string name="login_hint_password">Password</string>
    <string name="title_activity_login_signup">login_signup</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">Email</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one"> Create One</string>
    <string name="amity_email_id">Amity Email id</string>
    <string name="already_a_member">Already a member?</string>
    <string name="title_activity_passenger_screen">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="select_gate_no">Select Gate No.</string>
    <string name="enter_gate_no">Enter Gate No.</string>
    <string name="select_leaving_time">Select Leaving Time</string>
    <string name="num_of_vac_seats">Number of vacant seats</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="leaving_time">Leaving Time</string>

    <string-array name="Gate_Number">
        <item>Gate No.</item>
        <item>1</item>
        <item>1A</item>
        <item>2</item>
        <item>2A</item>
        <item>3</item>
        <item>4</item>
        <item>4A</item>
    </string-array>

</resources>